# MUTABAR

./: .gitignore  MANIFEST.in  README.md  build_app.sh  install.sh  main.py  mutabar.spec  pyproject.toml  requirements.txt  setup.py
docs/superpowers/plans/: 2026-04-02-mutadex-economy-phase1.md
docs/superpowers/specs/: 2026-04-02-mutadex-economy-phase1-design.md
game/: audio.py  input_handler.py  renderer.py  theme.py  window.py
game/battle/: cpu_ai.py  damage.py  engine.py  status_effects.py
game/creatures/: ascii_art.py  creature.py  database.py  traits.py  types.py
game/events/: event_types.py  resolver.py
game/llm/: engine.py  prompts.py
game/progression/: idle.py  lootbox.py  mutabox.py  mutagen.py  run_manager.py  starters.py  unlocks.py
game/screens/: base.py  battle.py  event.py  lootbox.py  main_menu.py  mutadex.py  run_over.py  settings.py  team_select.py  wave_complete.py
persistence/: config.py  database.py
tests/: test_battle_engine.py  test_cpu_ai.py  test_creature.py  test_damage.py  test_database.py  test_lootbox.py  test_persistence.py  test_prompts.py  test_renderer.py  test_run_manager.py  test_status_effects.py  test_theme.py  test_traits.py  test_types.py  test_unlocks.py
